    then all index requests will respond once only the primary shards have been
    written and the replica shards will be written later. This can improve
    throughput.
  - bugfix: elasticsearch: the default port range is now 9300-9305; the older
    range up to 9400 was unnecessary and could cause problems for the
    elasticsearch cluster in some cases.
  - bugfix: rabbitmq: disable automatic connection recovery (LOGSTASH-1350)
    (#642)
  - bugfix: riemann: fixed tagging of riemann events (#631)

  ## patterns
  - improvement: added IPV6 suppot to IP pattern (#623)

1.2.1 (September 7, 2013)
  # general
  - This is primarily a bugfix/stability release based on feedback from 1.2.0
  - web: kibana's default dashboard now works with the new logstash 1.2 schema.
  - docs: updated the tutorials to work in logstash 1.2.x
  - agent: Restored the --configtest flag (unintentionally removed from 1.2.0)
  - deprecation: Using deprecated plugin settings can now advise you on a
    corrective path to take. One example is the 'type' setting on filters and
    outputs will now advise you to use conditionals and give an example.
  - conditionals: The "not in" operator is now supported.

  ## inputs
  - bugfix: pipe: reopen the pipe and retry on any error. (#619, Jonathan Van
    Eenwyk)
  - bugfix: syslog: 'message' field no longer appears as an array.
  - bugfix: rabbitmq: can now bind the queue to the exchange (#624, #628,
    LOGSTASH-1300, patches by Jonathan Tron and Jonathan Van Eenwyk) 

  ## codecs
  - compatibility: json: if data given is not valid as json will now be used as
    the "message" of an event . This restores the older behavior when using
    1.1.13's "format => json" feature on inputs. (LOGSTASH-1299)
  - new: netflow: process netflow data (#580, patches by Nikolay Bryskin and
    Matt Dainty)

  ## filters
  - bugfix: multiline: the multiline filter returns! It was unintentionally
    removed from the previous (1.2.0) release.